--- a/app/views/main_transactions/show.html.erb
+++ b/app/views/main_transactions/show.html.erb
@@ -37,7 +37,8 @@
                     data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Transaction?" },
                     class: "btn btn-danger btn-sm" %>
       </div>
-      <%= link_to "Back", main_account_main_transactions_path(@main_transaction.main_account), 
-                  class: "btn btn-secondary btn-sm" %>
+      <%= link_to "Back", main_account_path(@main_transaction.main_account), 
+                    class: "btn btn-secondary btn-sm" %>
+
     </div>
   </div>
