--- a/app/views/sub_account_transactions/new_without_subaccount.html.erb
+++ b/app/views/sub_account_transactions/new_without_subaccount.html.erb
@@ -1,4 +1,3 @@
 <h1>New Transaction</h1>
 
-<%= render 'form', sub_account_transaction: @sub_account_transaction, main_account: @main_account, sub_account: @sub_account %>
-
+<%= render 'form', sub_account_transaction: @sub_account_transaction, url: create_sub_account_transaction_without_subaccount_path %>
