fix business logic

--- a/app/views/main_accounts/show.html.erb
+++ b/app/views/main_accounts/show.html.erb
@@ -9,17 +9,8 @@
   </h1>
 </div>
 
-<div class="d-flex align-items-center mb-4">
-  <p class="mb-0 me-3">
-    <span class="badge bg-success fs-5" title="Total Balance">
-      <%= number_to_currency(@main_account.balance, unit: @main_account.currency) %>
-    </span>
-  </p>
-  <p class="mb-0">
-    <span class="badge bg-info fs-5" title="Available Percentage">
-      <%= @main_account.available_percentage %>%
-    </span>
-  </p>
-</div>
+<%= render 'main_accounts/badges', balance: @main_account.balance, percentage: @main_account.available_percentage, currency: @main_account.currency %>
+
+<%= render 'main_accounts/messages' %>
 
 <%= render 'main_transactions/index' %>
