--- a/app/views/sub_accounts/_form.html.erb
+++ b/app/views/sub_accounts/_form.html.erb
@@ -51,7 +51,7 @@
   </div>
 
   <div class="d-flex justify-content-between">
-    <%= form.submit "Save SubAccount", class: "btn btn-primary" %>
+    <%= form.submit "Save Account", class: "btn btn-primary" %>
     <%= link_to "Cancel", main_account_sub_accounts_path(@main_account), class: "btn btn-secondary" %>
   </div>
 <% end %>
