--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,16 +10,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <!-- Subaccounts -->
-          <li class="nav-item">
-            <%= link_to "Accounts", 
-                        main_account_sub_accounts_path(current_user.main_accounts.first), 
-                        class: "nav-link #{'active' if current_page?(main_account_sub_accounts_path(current_user.main_accounts.first))}" %>
-          </li>
+          <% if current_user.main_accounts.any? && current_user.main_accounts.first.sub_accounts.any? %>
+            <li class="nav-item">
+              <%= link_to "Accounts", 
+                          main_account_sub_accounts_path(current_user.main_accounts.first), 
+                          class: "nav-link #{'active' if current_page?(main_account_sub_accounts_path(current_user.main_accounts.first))}" %>
+            </li>
+          <% end %>
 
           <!-- Transactions -->
           <% if current_user.main_accounts.any? && current_user.main_accounts.first.sub_accounts.any? %>
             <li class="nav-item">
-                <%= link_to "Transactions", all_sub_account_transactions_path, class: "nav-link #{'active' if current_page?(all_sub_account_transactions_path)}" %>
+              <%= link_to "Transactions", all_sub_account_transactions_path, class: "nav-link #{'active' if current_page?(all_sub_account_transactions_path)}" %>
             </li>
           <% end %>
         </ul>
@@ -37,13 +39,6 @@
                             edit_user_registration_path(current_user), 
                             class: "dropdown-item #{'active' if current_page?(edit_user_registration_path(current_user))}" %>
               </li>
-              <% if current_user.main_accounts.any? %>
-                <li>
-                  <%= link_to "Partners", 
-                              main_account_shared_main_account_users_path(current_user.main_accounts.first), 
-                              class: "dropdown-item #{'active' if current_page?(main_account_shared_main_account_users_path(current_user.main_accounts.first))}" %>
-                </li>
-              <% end %>
               <li>
                 <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
               </li>
