--- a/app/views/sub_account_transactions/show.html.erb
+++ b/app/views/sub_account_transactions/show.html.erb
@@ -11,7 +11,9 @@
         <%= number_to_currency(@sub_account_transaction.amount, unit: @sub_account_transaction.sub_account.main_account.currency) %>
       </span>
       <%= link_to @sub_account_transaction.sub_account.title, main_account_sub_account_path(@sub_account_transaction.sub_account.main_account, @sub_account_transaction.sub_account), class: "badge bg-info text-decoration-none me-2" %>
-      <%= link_to @sub_account_transaction.category.title, main_account_sub_account_category_path(@sub_account_transaction.sub_account.main_account, @sub_account_transaction.sub_account, @sub_account_transaction.category), class: "badge bg-secondary text-decoration-none" %>
+      <% unless @sub_account_transaction.category.title == @sub_account_transaction.sub_account.title %>
+        <%= link_to @sub_account_transaction.category.title, main_account_sub_account_category_path(@sub_account_transaction.sub_account.main_account, @sub_account_transaction.sub_account, @sub_account_transaction.category), class: "badge bg-secondary text-decoration-none" %>
+      <% end %>
     </div>
     <div class="mt-3">
       <p><%= @sub_account_transaction.description.present? ? @sub_account_transaction.description : "No description" %></p>
@@ -24,7 +26,10 @@
                     sub_account_transaction: { 
                       title: @sub_account_transaction.title, 
                       amount: @sub_account_transaction.amount, 
-                      transaction_kind: @sub_account_transaction.transaction_kind 
+                      transaction_kind: @sub_account_transaction.transaction_kind, 
+                      sub_account_id: @sub_account_transaction.sub_account_id, 
+                      category_id: @sub_account_transaction.category_id, 
+                      description: @sub_account_transaction.description 
                     }
                   ), 
                   class: "btn btn-outline-primary me-2" do %>
