--- a/app/views/main_accounts/_form.html.erb
+++ b/app/views/main_accounts/_form.html.erb
@@ -17,12 +17,12 @@
 
   <div class="mb-3">
     <label class="form-label">Available Percentage</label>
-    <input type="text" class="form-control" value="<%= main_account.available_percentage %>%" readonly>
+    <input type="text" class="form-control bg-light" value="<%= main_account.available_percentage %>%" readonly disabled>
   </div>
 
   <div class="mb-3">
     <label class="form-label">Balance</label>
-    <input type="text" class="form-control" value="<%= number_to_currency(main_account.balance, unit: "") %>" readonly>
+    <input type="text" class="form-control bg-light" value="<%= number_to_currency(main_account.balance, unit: "") %>" readonly disabled>
   </div>
 
   <div class="mb-3">
